<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content"
                android:padding="@dimen/padding" >
<TextView android:id="@id/entry" 
		  style="@style/CustomText"
          android:layout_width="fill_parent" 
          android:layout_marginLeft="@dimen/entry_margin"
          android:layout_marginRight="@dimen/entry_margin"
          android:layout_marginBottom="@dimen/entry_margin"
          android:layout_height="@dimen/entry_height" 
          android:text=""
          android:gravity="right"
          android:singleLine="true"
		 />

<Button android:id="@id/btn_ce"
		android:layout_width="fill_parent"
		android:layout_height="@dimen/btn_height"
		android:text = "@string/btn_ce"
	 	android:layout_below="@id/entry" 
		android:onClick = "onPress"
/>
<Button android:id="@id/btn_7"
		android:layout_width="@dimen/btn_width"
		android:layout_height="@dimen/btn_height"
		android:text = "@string/btn_7" 
		android:layout_below="@id/btn_ce" 
		android:onClick = "onPress"
/>
<Button android:id="@id/btn_8"
		android:layout_width="@dimen/btn_width"
		android:layout_height="@dimen/btn_height"
		android:text = "@string/btn_8"
		android:layout_toRightOf="@id/btn_7"
        android:layout_alignTop="@id/btn_7"
		android:onClick = "onPress"
/>
<Button android:id="@id/btn_9"
		android:layout_width="@dimen/btn_width"
		android:layout_height="@dimen/btn_height"
		android:text = "@string/btn_9" 
		android:layout_toRightOf="@id/btn_8"
        android:layout_alignTop="@id/btn_8"
		android:onClick = "onPress"
/>
<Button android:id="@id/btn_minus"
		android:layout_width="@dimen/btn_width"
		android:layout_height="@dimen/btn_height"
		android:text = "@string/btn_minus" 
		android:layout_toRightOf="@id/btn_9"
        android:layout_alignTop="@id/btn_9"
		android:onClick = "onPress"
/>
<Button android:id="@id/btn_4"
		android:layout_width="@dimen/btn_width"
		android:layout_height="@dimen/btn_height"
		android:text = "@string/btn_4" 
		android:layout_below="@id/btn_9" 
		android:onClick = "onPress"
/>
<Button android:id="@id/btn_5"
		android:layout_width="@dimen/btn_width"
		android:layout_height="@dimen/btn_height"
		android:text = "@string/btn_5"
		android:layout_toRightOf="@id/btn_4"
        android:layout_alignTop="@id/btn_4"
		android:onClick = "onPress"
/>
<Button android:id="@id/btn_6"
		android:layout_width="@dimen/btn_width"
		android:layout_height="@dimen/btn_height"
		android:text = "@string/btn_6" 
		android:layout_toRightOf="@id/btn_5"
        android:layout_alignTop="@id/btn_5"
		android:onClick = "onPress"
/>
<Button android:id="@id/btn_plus"
		android:layout_width="@dimen/btn_width"
		android:layout_height="@dimen/btn_height"
		android:text = "@string/btn_plus" 
		android:layout_toRightOf="@id/btn_6"
        android:layout_alignTop="@id/btn_6"
		android:onClick = "onPress"
/>
<Button android:id="@id/btn_1"
		android:layout_width="@dimen/btn_width"
		android:layout_height="@dimen/btn_height"
		android:text = "@string/btn_1" 
		android:layout_below="@id/btn_4" 
		android:onClick = "onPress"
/>
<Button android:id="@id/btn_2"
		android:layout_width="@dimen/btn_width"
		android:layout_height="@dimen/btn_height"
		android:text = "@string/btn_2"
		android:layout_toRightOf="@id/btn_1"
        android:layout_alignTop="@id/btn_1"
		android:onClick = "onPress"
/>
<Button android:id="@id/btn_3"
		android:layout_width="@dimen/btn_width"
		android:layout_height="@dimen/btn_height"
		android:text = "@string/btn_3" 
		android:layout_toRightOf="@id/btn_2"
        android:layout_alignTop="@id/btn_2"
		android:onClick = "onPress"
/>
<Button android:id="@id/btn_div"
		android:layout_width="@dimen/btn_width"
		android:layout_height="@dimen/btn_height"
		android:text = "@string/btn_div" 
		android:layout_toRightOf="@id/btn_3"
        android:layout_alignTop="@id/btn_3"
		android:onClick = "onPress"
/>
<Button android:id="@id/btn_0"
		android:layout_width="@dimen/btn_width"
		android:layout_height="@dimen/btn_height"
		android:text = "@string/btn_0" 
		android:layout_below="@id/btn_1" 
		android:onClick = "onPress"
/>
<Button android:id="@id/btn_equal"
		android:layout_width="@dimen/btn_equal_width"
		android:layout_height="@dimen/btn_height"
		android:text = "@string/btn_equal"
		android:layout_toRightOf="@id/btn_0"
        android:layout_alignTop="@id/btn_0"
		android:onClick = "onPress"
/>
<Button android:id="@id/btn_mult"
		android:layout_width="@dimen/btn_width"
		android:layout_height="@dimen/btn_height"
		android:text = "@string/btn_mult" 
		android:layout_toRightOf="@id/btn_equal"
        android:layout_alignTop="@id/btn_equal"
		android:onClick = "onPress"
/>

</RelativeLayout>